# aws-contact-form

./: .env_example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  send_email.py  serverless.yml  upload.sh
app/src/: index.html
aws-cloudfront-app/: main.tf  output.tf  provider.tf  s3.tf  terraform.tfvars  variables.tf
aws-cloudfront-app/app/src/: index.html
diagram/diagram/: ses.py
diagram/tests/: test_diagram.py
terraform/: .terraform.lock.hcl  acme-ovh.tf  main.tf  provider.tf  s3.tf  terraform.tfvars  variables.tf
terraform/app/src/: index.html  styles.css
terraform/templates/: s3policy.json
