[tool.poetry]
name = "aws-contact-form"
version = "0.1.0"
description = "Contact form"
authors = ["Krzysztof Olszewski <hello@deltacode.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28"
boto3 = "^1.24.6"
diagrams = "^0.21.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
